# air-ferry

./: .gitignore  .gitmodules  README.md  build.gradle  build.sh  gradle.properties  settings.gradle  setup.bat  setup.sh
.github/workflows/: android.yml
app/: README.md  build.gradle  proguard-rules.pro
app/src/cpp/: CMakeLists.txt
app/src/cpp/cfc-cpp/: MultiThreadedDecoder.h  jni.cpp
app/src/main/: AndroidManifest.xml
app/src/main/java/cc/asac/airferry/: AppLogger.java  CircularProgressView.java  FileRecord.java  FileRecordAdapter.java  FileRecordManager.java  FilesFragment.java  LocaleHelper.java  MainActivity.java  MimeTypeHelper.java  ModeSelToggle.java  OpencvCameraView.java  ReceiverFragment.java  ScanCornersView.java  SettingsFragment.java  SwipeRevealTouchListener.java
app/src/main/java/cc/asac/cimbar/: CircularProgressView.java  LocaleHelper.java  MainActivity.java  ModeSelToggle.java  OpencvCameraView.java  ReceiverFragment.java  ScanCornersView.java  SettingsFragment.java
app/src/main/res/color/: tab_selector.xml
app/src/main/res/drawable/: btn_primary_bg.xml  btn_text_bg.xml  dialog_bg.xml  dialog_header_bg.xml  edit_bg.xml  ic_nav_files.xml  ic_nav_receive.xml  ic_select_all.xml  ic_shortcut_files.xml  ic_shortcut_scan.xml  ic_shortcut_update.xml  mode_toggle_bg.xml  pill_bg.xml  progress_bar_drawable.xml  version_badge_bg.xml
app/src/main/res/layout/: action_bar_multi_select.xml  activity_main.xml  dialog_confirm_file.xml  dialog_log_view.xml  dialog_update.xml  fragment_files.xml  fragment_receiver.xml  fragment_settings.xml  item_file_record.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-v28/: styles.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml  shortcuts.xml
docs/: LIBCIMBAR.md
web/: CMakeLists.txt  Dockerfile  README.md  build-wasm-encode.sh  cimbar_js.js  index.html  main.js
